[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/playerSprites/tempAges.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 40 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 400, 800 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 400, 800 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 400, 800 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "form2",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "form1",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "form0",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="form" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 5 )
animation = "form1"

[node name="leftJumpCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( -80, 0 )
collide_with_areas = true

[node name="rightJumpCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 80, 0 )
collide_with_areas = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
